# my20Q

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ROADMAP.md
scripts/: bench_models.py  run_local.sh
src/my20q/: __init__.py  __main__.py  cli.py  config.py
src/my20q/agent/: __init__.py  dialogue.py  prompts.py  reasoner.py  safety.py
src/my20q/llm/: __init__.py  base.py  mock.py  ollama_client.py
src/my20q/taxonomy/: __init__.py  loader.py  node.py
src/my20q/taxonomy/data/: tree.yaml
tests/: conftest.py  test_dialogue.py  test_llm_backends.py  test_safety.py  test_taxonomy.py
